@@ -38,6 +38,7 @@ namespace NUnit.Extensions.Asp
 		protected internal abstract XmlElement GetChildElement(string htmlId);
 		protected internal abstract string GetChildElementHtmlId(string aspId);
 		protected internal abstract void EnterInputValue(string name, string value);
+		protected internal abstract void RemoveInputValue(string name);
 		protected internal abstract void Submit();
 		public abstract string Description
 		{
