@@ -17,6 +17,8 @@
 			<asp:LinkButton ID="dropCookieAndRedirect" OnClick="dropCookieAndRedirect_Click" Runat="server">Drop Cookie and Redirect</asp:LinkButton>
 			<br />
 			<asp:LinkButton ID="postBack" OnClick="postBack_Click" Runat="server">Post Back</asp:LinkButton>
+			<br />
+			<asp:LinkButton ID="dropCookieWithExpiry" OnClick="dropCookieWithExpiry_Click" Runat="server">Drop Cookie with Expiry</asp:LinkButton>
 			<p>Test Parameter: [<asp:Label ID="testParm" Runat="server"></asp:Label>]
 				<br />
 				Test Cookie: [<asp:Label ID="cookie" Runat="server"></asp:Label>]
@@ -24,6 +26,8 @@
 				Post Back link: [<asp:Label ID="postBackStatus" Runat="server">Not Clicked</asp:Label>]
 				<br />
 				User Agent: [<asp:Label ID="userAgent" Runat="server"></asp:Label>]
+ 				<br />
+				User Languages: [<asp:label ID="userLanguages" Runat="server"></asp:label>]
 			</p>
 		</form>
 	</body>
