@@ -18,11 +18,13 @@ namespace NUnitAspTestPages
 		protected System.Web.UI.WebControls.LinkButton redirect;
 		protected System.Web.UI.WebControls.LinkButton dropCookie;
 		protected System.Web.UI.WebControls.LinkButton dropCookieAndRedirect;
+		protected System.Web.UI.WebControls.LinkButton dropCookieWithExpiry;
 		protected Label cookie;
 		protected Label postBackStatus;
 		protected System.Web.UI.WebControls.LinkButton postBack;
 		protected Label testParm;
 		protected Label userAgent;
+		protected Label userLanguages;
 
 		private void Page_Load(object sender, System.EventArgs e)
 		{
@@ -30,6 +32,7 @@ namespace NUnitAspTestPages
 			postBackStatus.Text = "Not Clicked";
 			testParm.Text = Request["testparm"];
 			userAgent.Text = Request.UserAgent;
+			userLanguages.Text = UserLanguages();
 		}
 
 		protected void redirect_Click(object sender, EventArgs args)
@@ -53,6 +56,11 @@ namespace NUnitAspTestPages
 			postBackStatus.Text = "Clicked";
 		}
 
+		protected void dropCookieWithExpiry_Click(object sender, System.EventArgs e)
+		{
+			SetCookieExpires();
+		}
+
 		private void Redirect()
 		{
 			Response.Redirect("RedirectionTarget.aspx");
@@ -63,11 +71,30 @@ namespace NUnitAspTestPages
 			Response.SetCookie(new HttpCookie(HttpClientTest.TEST_COOKIE_NAME, HttpClientTest.TEST_COOKIE_VALUE));
 		}
 
+		private void SetCookieExpires()
+		{
+			HttpCookie cookie = new HttpCookie(HttpClientTest.TEST_COOKIE_NAME, HttpClientTest.TEST_COOKIE_VALUE);
+			cookie.Expires = new DateTime(2024, 11, 20, 14, 0, 0, 0);
+			Response.SetCookie(cookie);
+		}
+
 		private void SetCookieLabel()
 		{
 			HttpCookie requestCookie = Request.Cookies[HttpClientTest.TEST_COOKIE_NAME];
 			if (requestCookie == null) cookie.Text = "Not Set";
 			else cookie.Text = requestCookie.Value;
+		}
+
+		private string UserLanguages()
+		{
+			if (Request.UserLanguages == null) return "Not Set";
+
+			string languages = "";
+			foreach (string language in Request.UserLanguages)
+			{
+				languages += "[" + language + "]";
+			}
+			return languages;
 		}
 
 		#region Web Form Designer generated code
